# back/src/routes/pontoRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getAllPontos, createPonto, getPontoById, updatePonto, deletePonto, getPontoByFuncionarioId } from '../controllers/pontoController.js';
+import { getAllPontos, createPonto, getPontoById, updatePonto, deletePonto, getPontoByFuncionarioId, incrementarImpressoes } from '../controllers/pontoController.js';
 
 const pontoRouter = express.Router();
 
@@ -11,6 +11,11 @@ pontoRouter.route('/ponto/:id')
     .get(getPontoById)
     .put(updatePonto)
     .delete(deletePonto)
+
+pontoRouter.route('/ponto/funcionario/:id')
     .get(getPontoByFuncionarioId)
+
+pontoRouter.route('/ponto/:id/incrementar-impressoes')
+    .put(incrementarImpressoes)
 
 export default pontoRouter;
